--- a/ShopaholicPlanner/Web.config
+++ b/ShopaholicPlanner/Web.config
@@ -10,8 +10,8 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" 
-         connectionString="Data Source=(LocalDb)\HenryDB;AttachDbFilename=|DataDirectory|\aspnet-ShopaholicPlanner-20180820085048.mdf;
-         Initial Catalog=aspnet-ShopaholicPlanner-20180820085048;
+         connectionString="Data Source=(LocalDb)\mssqllocaldb;
+         Initial Catalog=dev;
          Integrated Security=True" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>
